--- a/src/app/usuarios/usuario/usuario.component.html
+++ b/src/app/usuarios/usuario/usuario.component.html
@@ -1,1 +1,15 @@
-<p>usuario works!</p>
+<div class="row">
+    <div class="col-4">
+        <img [src]="usuario?.avatar" alt="avatar" class="img-thumbnail" />
+    </div>
+
+    <div class="col">
+        <ul class="list-group">
+            <li class="list-group-item">
+                <b>Nombre</b> {{usuario?.first_name}} <br>
+                <b>Apellido</b> {{usuario?.last_name}} <br>
+                <b>Email</b> {{usuario?.email}}
+            </li>
+        </ul>
+    </div>
+</div>
